<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
	<name>map_MM_suite_t13</name>
	<version>1.0.0</version>
	<description>unknown</description>
	<maintainer email="none@none.com">none</maintainer>
	<license>none</license>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>sample</depend>
	<depend>map_MM_suite</depend>
</package>
